--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -50,16 +50,6 @@
   time {
     position: relative;
     margin-right: 1.5em;
-
-    &::after {
-      background: $light;
-      bottom: 1px;
-      content: " ";
-      height: 2px;
-      position: absolute;
-      right: -20px;
-      width: 12px;
-    }
   }
 
   span[itemprop="author"] {
@@ -153,13 +143,16 @@
       position: relative;
       opacity: 0;
       outline: none;
+      margin-left: -1.2em;
+      padding-left: 1.2em;
 
       &::before {
         content: "#";
         position: absolute;
-        right: -3px;
+        left: 0;
         width: 1em;
         font-weight: $bold-weight;
+        color: $text-link-blue;
       }
     }
   }
